---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 953
expression: "\nrecord Triple {\n  Triple(a: Int, b: Int, c: Int)\n}\n\nfn main() {\n  let triple = Triple(1,2,3)\n  let Triple(a, b, c, ..) = triple\n}"
---
----- SOURCE CODE

record Triple {
  Triple(a: Int, b: Int, c: Int)
}

fn main() {
  let triple = Triple(1,2,3)
  let Triple(a, b, c, ..) = triple
}

----- ERROR
error: Unnecessary spread operator
  ┌─ /src/one/two.rakun:8:23
  │
8 │   let Triple(a, b, c, ..) = triple
  │                       ^^

This record has 3 fields and you have already assigned variables to all
of them.
